--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -96,6 +96,11 @@ func_vlm_add_executable(demo_qwen2_vl)
 
 if(QNN)
     func_llm_add_executable(demo_qwen_npu)
+    func_llm_add_executable(test_qnn)
+    func_llm_add_executable(test_vit)
+    func_llm_add_executable(test_split)
+    func_llm_add_executable(test_rope)
+    func_llm_add_executable(test_softmax)
     # func_llm_add_executable(main_qwen_npu)
     # func_llm_add_executable(demo_phonelm_npu)
     # func_llm_add_executable(main_phonelm_npu)
