--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -101,6 +101,7 @@ if(QNN)
     func_llm_add_executable(test_split)
     func_llm_add_executable(test_rope)
     func_llm_add_executable(test_softmax)
+    func_llm_add_executable(test_quickgelu)
     # func_llm_add_executable(main_qwen_npu)
     # func_llm_add_executable(demo_phonelm_npu)
     # func_llm_add_executable(main_phonelm_npu)
