dev : NPU VIT end-to-end rotation model.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -104,12 +104,12 @@ if(QNN)
 
     # single operator TEST examples
     # func_llm_add_executable(test_qnn)
-    # func_llm_add_executable(test_vit)
     # func_llm_add_executable(test_split)
     # func_llm_add_executable(test_rope)
     # func_llm_add_executable(test_softmax)
     # func_llm_add_executable(test_quickgelu)
 
+    func_vlm_add_executable(test_vit)
     func_vlm_add_executable(demo_qwen2_vl_npu)
 endif()
 
